public/css/startPage.css
html {
    height: 100%;
    width: 100%;
    min-height: 100%;
}

body {
    height: 100%;
    width: 100%;
    min-height: 100%;
}


:root {
    --wenge: #5D576B;
    --tropical-indigo: #8884FF;
    --thistle: #D7BCE8;
    --thistle-light: #E8CEE4;
    --pale-purple: #FDE2FF;
    --pink: #EDA4BD
}


.layout {
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-areas: "sidebar body";
    grid-template-columns: 15% [col-sidebar] 85% [col-body];
}


.sidebar {
    grid-area: sidebar;
    background-color: var(--wenge);
    padding-top: 2rem;
    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
    position: sticky;
    top: 0;
    height: 100%;
}

.sidebar h1 {
    color: white;
    margin-bottom: 5rem;
    padding-left: 2rem;
    padding-right: 2rem;
}

.sidebar .sidebar-nav {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.sidebar .sidebar-nav li {
    list-style-type: none;
    margin-bottom: 3rem;
}

.sidebar .sidebar-nav li a {
    text-decoration: none;
    color: var(--pale-purple);
    font-size: 1.2rem;
    font-weight: bold;
    padding: 1rem 2rem;
    border-radius: 5px;
}

.sidebar .sidebar-nav li a:hover {
    color: var(--wenge);
    background-color: var(--pale-purple);
}


.body {
    grid-area: body;
    height: 90%;
    width: 100%;
}

.body .account-bar {
    height: 3%;
    background-color: rgba(92, 87, 105, 0.3);
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.body .account-bar .account-icon {
    height: 80%;
    width: 5%;
    border: 4px solid var(--wenge);
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 1rem;
    background-color: white;
}

.body .account-bar .account-icon:hover {
    background-color: var(--pink);
}

.body .account-bar .account-icon img {
    height: 90%;
    width: 90%;
}

.body .abstract-blogs-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    height: 50%;
    margin-left: 4rem;
    margin-right: 4rem;
    margin-top: 2rem;
    column-gap: 4rem;
    row-gap: 3rem;
}

.body .abstract-blogs-container .abstract-blog {
    display: flex;
    flex-direction: column;
    border-width: 0px 0px 4px 0px;
    border-style: solid;
    height: 80%;
    border-color: var(--wenge);
}


.body .abstract-blogs-container .abstract-blog h2 {

}

.body .abstract-blogs-container .abstract-blog img {
    width: 100%;
    height: 70%;
    border-radius: 10px 10px 0 0;
}

.abstract-blog {
    text-decoration: none;
    color: #1a202c;
}

.abstract-blog:hover {
    color: var(--pink);
}

